--- a/index.html
+++ b/index.html
@@ -143,15 +143,52 @@
 	<section id="works" class="">
 		<div class="container">
 
+			<a href="project-zizi-vam.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-zizi-VAM.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>The Zizi Show - A Deepfake Drag Cabaret at the V&amp;A						</h3>
+
+						<span style="display:block" class="category">multi-channel video, 2023</span>
+					</div>
+				</div>
+			</a>
+
+			<a href="project-zizimotion.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-ZiziMotion.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>Zizi in Motion: A Deepfake Drag Utopia</h3>
+
+						<span style="display:block" class="category">(Movement by Wet Mess), video series, 2023</span>
+					</div>
+				</div>
+			</a>
+
+			<a href="project-sontag.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-Sontag.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>A.I. Interprets A.I. Interpreting ‘Against Interpretation’ </h3>
+
+						<span style="display:block" class="category">(Sontag 1966), multi-channel video, 2023</span>
+					</div>
+				</div>
+			</a>
+
+			<div class="clear hide-under-tablet"></div>
+
 			<a href="project-zizi-show.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
 						<img src="images/project-zizi-show.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>The Zizi Show</h3>
+						<h3>The Zizi Show - Interactive Version</h3>
 
-						<span style="display:block" class="category">video &amp; interactive performance, 2020 -
-							2023</span>
+						<span style="display:block" class="category">video &amp; interactive performance, 2020</span>
 					</div>
 				</div>
 			</a>
@@ -167,6 +204,7 @@
 				</div>
 			</a>
 
+
 			<a href="project-zizi-2019.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -179,6 +217,7 @@
 			</a>
 
 			<div class="clear hide-under-tablet"></div>
+
 
 			<a href="project-cusp.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -203,6 +242,7 @@
 			</a>
 
 
+
 			<a href="project-closedLoop.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -213,7 +253,6 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
-
 
 			<div class="clear hide-under-tablet"></div>
 
@@ -240,8 +279,6 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
-
-
 
 
 
@@ -337,6 +374,7 @@
 			</a>
 
 			<div class="clear hide-under-tablet"></div>
+
 
 			<a href="project-lineForWalk.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
