--- a/project-zizi-2019.html
+++ b/project-zizi-2019.html
@@ -11,7 +11,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - Zizi</title>
+	<title>Jake Elwes - Zizi Queering the Dataset</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -180,11 +180,21 @@
 					allowfullscreen></iframe>
 				<br><small>Zizi: Queering the Dataset 2019, 30 second extract of single channel</small>
 				<br><br>
-
+				<img src="images/project-zizi19/Zizi-prints.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
+				<br><small>Series of 24 prints. Archival pigment prints on Platine Fibre Rag paper 21x21cm</small>
+				<br>
+				<img src="images/project-zizi19/athens.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
+				<br><small>7-channel installation at You and AI (2021), Onassis Foundation, Pedion tou Areos Park, Athens, Greece. Photograph: Stelios Tzetzias</small>
+				<br>
+				<img src="images/project-zizi19/render.jpeg" alt="CUSP 2019 - Jake Elwes digital artist" />
+				<br><small>4-channel installation render Gazelli Art House, London (2020)</small>
+				<br>
+				<img src="images/project-zizi19/Zabludowicz.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
+				<br><small>7-channel installation at Among the Machines (2022), Zabludowicz Collection, London, UK				</small>
+				<br>
 				<img src="images/project-zizi19/Edinburgh.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
-				<!-- <img src="images/project-zizi19/ZiziFace.jpg" style="width:36%; "
-					alt="CUSP 2019 - Jake Elwes digital artist" /> -->
-				<br><small>7-channel installation at Inspace City Screen, Edinburgh Fringe Festival 2019</small>
+				<br><small>7-channel installation at Inspace City Screen, Edinburgh Fringe Festival 2019
+				</small>
 				<br>
 				<img src="images/project-zizi19/Screen1.jpg" style="width:49%; "
 					alt="CUSP 2019 - Jake Elwes digital artist" />
@@ -192,9 +202,6 @@
 					alt="CUSP 2019 - Jake Elwes digital artist" />
 				<br><small>Zizi: Queering the Dataset 2019, custom LED screen</small>
 				<br>
-
-				<img src="images/project-zizi19/3zizis.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
-				<br><small>Zizi: Queering the Dataset 2019, 3-channels</small>
 				<br>
 
 
