--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -94,13 +94,13 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Zizi & Me</h3>
-							<p class="project-desc">2020, multimedia - performance & video installation (ongoing) <br> Collaboration with <i><a id="show" target="_blank"
-								href="https://www.instagram.com/methedragqueen/">Me the Drag Queen</a></i>
-							</p>
+							<p class="project-desc">2020 - 2023, multimedia | theatre, performance & video
+							</p><p>Ongoing collaboration with <i><a id="show" target="_blank"
+								href="https://www.instagram.com/methedragqueen/">Me the Drag Queen</a></i></p>
 
 							<p>
-								‘Zizi & Me’ is a double act between drag queen 'Me The Drag Queen', and a deepfake (A.I.)
-								clone of 'Me The Drag Queen'. By training a neural network<small>*</small> on filmed footage
+								‘Zizi & Me’ is a double act between drag queen <i>Me The Drag Queen</i>, and a deepfake (A.I.)
+								clone of <i>Me The Drag Queen</i>. By training a neural network<small>*</small> on filmed footage
 								this network learnt to construct a virtual body that can be controlled by feeding it new
 								reference movements. The first act 'Anything You Can Do (I Can Do Better)’ satirizes the idea that an AI is something that we might mistake for a human. Through drag performance, we aim to use cabaret and
 								musical theatre to challenge narratives surrounding A.I. and society. 
@@ -159,16 +159,35 @@
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				<small>Zizi & Me - Anything You Can Do (I Can Do Better), Digital Video, 2020<br>
 					<small>Created by Jake Elwes and Me the Drag Queen,
-						Performance - <a id="show" target="_blank"
+						Performance: <a id="show" target="_blank"
 							href="https://www.instagram.com/methedragqueen/">Me</a>,
-						Cinematographer - <a id="show" target="_blank" href="https://www.tobyelwes.com/">Toby Elwes</a>
+						Cinematographer: <a id="show" target="_blank" href="https://www.tobyelwes.com/">Toby Elwes</a>
 					</small></small>
 
 				<br><br><br>
 
 
 
+				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/NwIhejF4_zE"
+				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<small>Zizi & Me - The world’s first chance to see AI and real-life drag queens on stage together<br>
+				<small>Mady by Chenxuan Wang
+				</small></small>
 
+				<br><br>
+
+				<img src="images/project-zizi-and-me/zizi-and-me1.jpg" alt="Zizi & Me - Jake Elwes digital artist" />
+				<br><small>A Night of A.I and Drag (2022), Zabludowicz Collection - Photos: Vicki Couchman
+				</small>
+				<br>
+				<img src="images/project-zizi-and-me/zizi-and-me2.jpeg" alt="Zizi & Me - Jake Elwes digital artist" />
+				<br>
+				<img src="images/project-zizi-and-me/zizi-and-me3.jpg" alt="Zizi & Me - Jake Elwes digital artist" />
+				<br>
+				<img src="images/project-zizi-and-me/zizi-and-me4.jpg" alt="Zizi & Me - Jake Elwes digital artist" />
+				<br>
+				<br>
 	
 				
 				<iframe class="half"  style="padding-right: 5%;" height="360" src="https://www.youtube.com/embed/I8pEAxmDsac"
@@ -184,12 +203,7 @@
 				<br><br><br>
 
 				
-				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/NwIhejF4_zE"
-				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-			<small>Zizi & Me - The world’s first chance to see AI and real-life drag queens on stage together<br>
-				<small>Mady by Chenxuan Wang
-				</small></small>
+
 
 
 
