--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -97,7 +97,7 @@
 							<h3 class="border-top">The Zizi Show</h3>
 							<p class="project-desc">2020, interactive performance
 							</p>
-							<p><a id="show" target="_blank" href="https://zizi.ai/">ENTER | ZIZI.AI</a></p>
+							<p><a id="show" target="_blank" href="https://zizi.ai/">Visit ZIZI.AI</a><br>~ Public access currently closed but please <a id="show" href="javascript:window.location.href=atob('bWFpbHRvOnppemlkcmFnc2hvd0BnbWFpbC5jb20/U3ViamVjdD1aaXppIFNob3cgQWNjZXNzIFJlcXVlc3QmYm9keT1QbGVhc2Ugc2VuZCBtZSB0aGUgYWNjZXNzIGNvZGUgZm9yIHppemkuYWksIHRoYW5rIHlvdS4=')" target="_top" class="btn-social btn-outline">email here</a> for access.</p>
 							<p>Drag Queens, Drag Kings, Drag Things and Artificial Intelligence… <br>
 								The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting a
 								groundbreaking new show with a twist. It features acts that have been constructed using
