bold and cl image swap

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 						<h3>Zizi in Motion: A Deepfake Drag Utopia</h3>
 
-						<span style="display:block" class="category">(Movement by Wet Mess), video series, 2023</span>
+						<span style="display:block" class="category"><b>(Movement by Wet Mess)</b>, video series, 2023</span>
 					</div>
 				</div>
 			</a>
@@ -174,7 +174,7 @@
 
 						<h3>A.I. Interprets A.I. Interpreting ‘Against Interpretation’ </h3>
 
-						<span style="display:block" class="category">(Sontag 1966), multi-channel video, 2023</span>
+						<span style="display:block" class="category"><b>(Sontag 1966)</b>, multi-channel video, 2023</span>
 					</div>
 				</div>
 			</a>
