--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -179,14 +179,16 @@ Two datasets to train the algorithms: a dataset of 4.1 million captioned images 
 					$(resizeDivs);
 					$(window).resize(resizeDivs);
 				</script>
-				<small>Single channel rendering of two channel video installation</small>
+				<small>Two channel video installation at <i>Data • Glitch • Utopia</i>, Gazelli Art House 2023</small>
 
 				<br></br>
-				<img src="images/project-closedLoop/CLoop1.jpg" alt="Jake Elwes digital artist" />
-				<small>installation shot from Future Intelligence 2019 - Tank Museum, Shanghai</small>
 
 				<img src="images/project-closedLoop/CLoop2.jpg" alt="Jake Elwes digital artist" />
 				<small>installation shot from Future Intelligence 2019 - Tank Museum, Shanghai</small>
+
+				<img src="images/project-closedLoop/CLoop1.jpg" alt="Jake Elwes digital artist" />
+				<small>installation shot from Future Intelligence 2019 - Tank Museum, Shanghai</small>
+
 				<img src="images/project-closedLoop/CLoop3.jpg" alt="Jake Elwes digital artist" />
 				<small>Installation shot from Writing the History of the Future 2019 - ZKM, Karlsruhe</small>
 
