--- a/about.html
+++ b/about.html
@@ -311,7 +311,16 @@
 							</p>
 							<br>
 						<p>
+							<b>September 2023 - January 2024</b> - <a id=show target="_blank"
+								href="http://jam.jutfoundation.org.tw/en/about-jut-art-museum">Future Lives, Future You
+							</a> <b>JUT Art Museum</b>, Taipei, Taiwan
+						</p>
+						<p>
 							<b>3rd Mar 2023 - 27th May 2023</b> - <a id=show target="_blank"
+							href="https://darz.art/en/galleries/blanc-international-contemporary-art-space">More Than Human,</a>  <b>Blanc Art Space</b>, Beijing, China
+						</p>
+						<p>
+							<b>27 May 2023 - 23 July 2023</b> - <a id=show target="_blank"
 								href="https://honorfraser.com/?s=current&eid=199">Make Me Feel Mighty Real: Drag/tech
 								And
 								The Queer Avatar,
