added china and taiwan shows

--- a/about.html
+++ b/about.html
@@ -301,8 +301,8 @@
 						<p>
 							<p>
 								<b>25th May 2023 - 20th April 2024</b> - <a id=show target="_blank"
-									href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">The Zizi Show,
-								</a>Gallery 99 (solo display), Photography Centre, <b>V&amp;A / Victoria and Albert Museum</b>, South Kensington, London, UK
+									href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">The Zizi Show - A Deepfake Drag Cabaret,
+								</a>Digital Gallery (solo display), Photography Centre, <b>V&amp;A / Victoria and Albert Museum</b>, South Kensington, London, UK
 							</p>
 							<p>
 								<b>1st June 2023 - 8th July 2023</b> - <a id=show target="_blank"
@@ -312,7 +312,7 @@
 							<br>
 						<p>
 							<b>September 2023 - January 2024</b> - <a id=show target="_blank"
-								href="http://jam.jutfoundation.org.tw/en/about-jut-art-museum">Future Lives, Future You
+								href="http://jam.jutfoundation.org.tw/en/about-jut-art-museum">Future Lives, Future You,
 							</a> <b>JUT Art Museum</b>, Taipei, Taiwan
 						</p>
 						<p>
