added china and taiwan shows

--- a/about.html
+++ b/about.html
@@ -228,6 +228,8 @@
 				<!-- <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> |  -->
 				<a id=show target="_blank" href="JElwes-CV.pdf">CV PDF</a>
 				<br><br>
+				<a id=show target="_blank" href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">V&amp;A Museum</a> |
+				<a id=show target="_blank" href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli Art House</a> |
 				<a id=show target="_blank"
 					href="http://www.contemporaryartsociety.org/news/artist-to-watch/jake-elwes/">Contemporary Art
 					Society</a> |
