added china and taiwan shows

--- a/about.html
+++ b/about.html
@@ -303,7 +303,7 @@
 						<p>
 							<p>
 								<b>25th May 2023 - 20th April 2024</b> - <a id=show target="_blank"
-									href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">The Zizi Show - A Deepfake Drag Cabaret,
+									href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">The Zizi Show at the V&amp;A,
 								</a>Digital Gallery (solo display), Photography Centre, <b>V&amp;A / Victoria and Albert Museum</b>, South Kensington, London, UK
 							</p>
 							<p>
