--- a/project-zizimotion.html
+++ b/project-zizimotion.html
@@ -157,6 +157,56 @@
 
 			<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns" id="vids">
 
+				<iframe id="vid0"
+				src="https://player.vimeo.com/video/859349629?color=ffffff&title=0&byline=0&portrait=0"
+				width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+				allowfullscreen></iframe>
+
+				<small><i>Close up edition, amalgamation of all 21 cast members </i> (3 minute extract)</small><br><br>
+
+				<iframe id="vid4"
+				src="https://player.vimeo.com/video/828273537?h=5d971a2862&?color=ffffff&title=0&byline=0&portrait=0"
+				width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+				allowfullscreen></iframe>
+
+				<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/charlieprobablywood">Charlie Wood</a> </i> (2 minute extract)</small><br><br>
+
+				
+				<iframe id="vid18"
+				src="https://player.vimeo.com/video/828273966?h=6c07ef35ae&?color=ffffff&title=0&byline=0&portrait=0"
+				width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+				allowfullscreen></iframe>
+
+				<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/officialsistersister">Sister Sister</a> </i> (2 minute extract)</small><br><br>
+
+
+
+				<iframe id="vid12"
+				src="https://player.vimeo.com/video/828278001?h=3026f53b8c&?color=ffffff&title=0&byline=0&portrait=0"
+				width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+				allowfullscreen></iframe>
+
+				<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/mahatmakhandi">Mahatma Khandi</a> </i> (2 minute extract)</small><br><br>
+
+
+
+				<img src="images/project-ZiziMotion/Gazelli1.jpg" style="width:100%; "
+					alt="Zizi in Motion at Gazelli Art House 2023 - Jake Elwes digital artist" />
+				<br><small>Installation at 'Data • Glitch • Utopia' Gazelli Art House (2023)</small>
+
+				<img src="images/project-ZiziMotion/Gazelli2.jpg" style="width:100%; "
+					alt="Zizi in Motion at Gazelli Art House 2023 - Jake Elwes digital artist" />
+				<br><br>
+
+				<iframe id="vid2"
+				src="https://player.vimeo.com/video/828277898?h=bd19098f6f&?color=ffffff&title=0&byline=0&portrait=0"
+				width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+				allowfullscreen></iframe>
+
+				<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/onlybourgeoisie">Bourgeoisie</a> </i> (2 minute extract)</small><br><br>
+
+
+
 
 					<iframe id="vid"
 					src="https://player.vimeo.com/video/828273342?h=5c5e382653&?color=ffffff&title=0&byline=0&portrait=0"
@@ -166,6 +216,15 @@
 					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/baby.lame">Baby Lame</a> </i> (2 minute extract)</small><br><br>
 
 
+					<iframe id="vid19"
+					src="https://player.vimeo.com/video/828278145?h=3152df4e90&?color=ffffff&title=0&byline=0&portrait=0"
+					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+					allowfullscreen></iframe>
+
+					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/tete_bang">TeTe Bang</a> </i> (2 minute extract)</small><br><br>
+
+
+	
 					<iframe id="vid1"
 					src="https://player.vimeo.com/video/828273392?h=f89eec4e08&?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
@@ -174,12 +233,13 @@
 					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/bolly_illusion">Bolly-Illusion</a> </i> (2 minute extract)</small><br><br>
 
 
-					<iframe id="vid2"
-					src="https://player.vimeo.com/video/828277898?h=bd19098f6f&?color=ffffff&title=0&byline=0&portrait=0"
+					<iframe id="vid8"
+					src="https://player.vimeo.com/video/828273778?h=6b10e4f72e&?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 					allowfullscreen></iframe>
 
-					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/onlybourgeoisie">Bourgeoisie</a> </i> (2 minute extract)</small><br><br>
+					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/herrthequeen">HERR</a> </i> (2 minute extract)</small><br><br>
+
 
 					<iframe id="vid3"
 					src="https://player.vimeo.com/video/828273482?h=ec0834757c&?color=ffffff&title=0&byline=0&portrait=0"
@@ -189,14 +249,7 @@
 					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/tastemycaramelle">Cara Melle</a> </i> (2 minute extract)</small><br><br>
 
 
-					<iframe id="vid4"
-					src="https://player.vimeo.com/video/828273537?h=5d971a2862&?color=ffffff&title=0&byline=0&portrait=0"
-					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
-					allowfullscreen></iframe>
-
-					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/charlieprobablywood">Charlie Wood</a> </i> (2 minute extract)</small><br><br>
-
-
+		
 					<iframe id="vid5"
 					src="https://player.vimeo.com/video/828273588?h=0ec1aee0d4&?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
@@ -210,6 +263,7 @@
 
 					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/dahc_dermur_viii">Dahc Dermur VIII</a> </i> (2 minute extract)</small><br><br>
 
+					
 
 					<iframe id="vid7"
 					src="https://player.vimeo.com/video/828273739?h=58f50ef910&?color=ffffff&title=0&byline=0&portrait=0"
@@ -219,12 +273,8 @@
 					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/dakota.schiffer">Dakota Schiffer</a> </i> (2 minute extract)</small><br><br>
 
 
-					<iframe id="vid8"
-					src="https://player.vimeo.com/video/828273778?h=6b10e4f72e&?color=ffffff&title=0&byline=0&portrait=0"
-					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
-					allowfullscreen></iframe>
+	
 
-					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/herrthequeen">HERR</a> </i> (2 minute extract)</small><br><br>
 					<iframe id="vid9"
 					src="https://player.vimeo.com/video/828273825?h=a439b332ac&?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
@@ -247,12 +297,15 @@
 					allowfullscreen></iframe>
 
 					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/lukeslyka">Luke Slyka</a> </i> (2 minute extract)</small><br><br>
-					<iframe id="vid12"
-					src="https://player.vimeo.com/video/828278001?h=3026f53b8c&?color=ffffff&title=0&byline=0&portrait=0"
+	
+
+					<iframe id="vid20"
+					src="https://player.vimeo.com/video/828274006?h=30c5118cee&?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 					allowfullscreen></iframe>
 
-					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/mahatmakhandi">Mahatma Khandi</a> </i> (2 minute extract)</small><br><br>
+					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/wet_mess">Wet Mess</a></i> (2 minute extract)</small><br><br>
+
 
 
 					<iframe id="vid13"
@@ -291,32 +344,12 @@
 					allowfullscreen></iframe>
 
 					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/mxrubywednesday">Ruby Wednesday</a> </i> (2 minute extract)</small><br><br>
-					<iframe id="vid18"
-					src="https://player.vimeo.com/video/828273966?h=6c07ef35ae&?color=ffffff&title=0&byline=0&portrait=0"
-					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
-					allowfullscreen></iframe>
-
-					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/officialsistersister">Sister Sister</a> </i> (2 minute extract)</small><br><br>
 
 
-					<iframe id="vid19"
-					src="https://player.vimeo.com/video/828278145?h=3152df4e90&?color=ffffff&title=0&byline=0&portrait=0"
-					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
-					allowfullscreen></iframe>
-
-					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/tete_bang">TeTe Bang</a> </i> (2 minute extract)</small><br><br>
-
-
-					<iframe id="vid20"
-					src="https://player.vimeo.com/video/828274006?h=30c5118cee&?color=ffffff&title=0&byline=0&portrait=0"
-					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
-					allowfullscreen></iframe>
-
-					<small><i>Zizi in Motion: A Deepfake Drag Utopia - 								<a id="show" target="_blank" href="https://www.instagram.com/wet_mess">Wet Mess</a></i> (2 minute extract)</small><br><br>
-
-
+	
 				<script>
 					function resizeDivs() {
+						$('#vid0').css("height", $('#vid0').width() / 1.6);
 						$('#vid').css("height", $('#vid').width() / 1.7777);
 						$('#vid1').css("height", $('#vid1').width() / 1.7777);
 						$('#vid2').css("height", $('#vid2').width() / 1.7777);
