remove news and update about

--- a/about.html
+++ b/about.html
@@ -86,17 +86,10 @@
 				<div class="border-top" style="padding-top: 0px;"></div>
 			</div>
 
-			<div class="desktop-2 tablet-6 columns">
+			<div class="desktop-4 tablet-6 columns">
 				<!-- icons to try for about fa-eye fa-male fa-plus -->
 				<a href="index.html" class="btn-social btn-outline">
 					<p>WORKS</p>
-				</a>
-			</div><!-- // .desktop-3 -->
-
-			<div class="desktop-2 tablet-6 columns">
-				<!-- icons to try for about fa-eye fa-male fa-plus -->
-				<a href="news.html" class="btn-social btn-outline">
-					<p>NEWS &amp; TALKS</p>
 				</a>
 			</div><!-- // .desktop-3 -->
 
@@ -228,8 +221,12 @@
 				<!-- <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> |  -->
 				<a id=show target="_blank" href="JElwes-CV.pdf">CV PDF</a>
 				<br><br>
-				<a id=show target="_blank" href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">V&amp;A Museum</a> |
-				<a id=show target="_blank" href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli Art House</a> |
+				<a id=show target="_blank" href="https://en.wikipedia.org/wiki/Jake_Elwes">Wikipedia</a> |
+				<a id=show target="_blank"
+					href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">V&amp;A Museum</a>
+				|
+				<a id=show target="_blank" href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli Art
+					House</a> |
 				<a id=show target="_blank"
 					href="http://www.contemporaryartsociety.org/news/artist-to-watch/jake-elwes/">Contemporary Art
 					Society</a> |
@@ -301,40 +298,21 @@
 					<div class="shows">
 						<h4>Current/Upcoming Exhibtions</h4>
 						<p>
-							<p>
-								<b>25th May 2023 - 20th April 2024</b> - <a id=show target="_blank"
-									href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">The Zizi Show at the V&amp;A,
-								</a>Digital Gallery (solo display), Photography Centre, <b>V&amp;A / Victoria and Albert Museum</b>, South Kensington, London, UK
-							</p>
-							<p>
-								<b>1st June 2023 - 8th July 2023</b> - <a id=show target="_blank"
-									href="https://gazelliarthouse.com/exhibitions/170-jake-elwes-data-glitch-utopia/">Jake Elwes: Data • Glitch • Utopia
-								</a>(solo show), <b>Gazelli Art House</b>, London, UK
-							</p>
-							<br>
 						<p>
-							<b>September 2023 - January 2024</b> - <a id=show target="_blank"
-								href="http://jam.jutfoundation.org.tw/en/about-jut-art-museum">Future Lives, Future You,
+							<b>25th May 2023 - 20th April 2024</b> - <a id=show target="_blank"
+								href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">The
+								Zizi Show at the V&amp;A,
+							</a>Digital Gallery (solo display), Photography Centre, <b>V&amp;A / Victoria and Albert
+								Museum</b>, South Kensington, London, UK
+						</p>
+
+						<p>
+							<b>9th Sept 2023 - 28th Jan 2024</b> - <a id=show target="_blank"
+								href="https://jam.jutfoundation.org.tw/en/exhibition/107/4372">Future Lives, Future You,
 							</a> <b>JUT Art Museum</b>, Taipei, Taiwan
 						</p>
-						<p>
-							<b>3rd Mar 2023 - 27th May 2023</b> - <a id=show target="_blank"
-							href="https://darz.art/en/galleries/blanc-international-contemporary-art-space">More Than Human,</a>  <b>Blanc Art Space</b>, Beijing, China
-						</p>
-						<p>
-							<b>27 May 2023 - 23 July 2023</b> - <a id=show target="_blank"
-								href="https://honorfraser.com/?s=current&eid=199">Make Me Feel Mighty Real: Drag/tech
-								And
-								The Queer Avatar,
-							</a> <b>Honor Fraser Gallery</b>, Los Angeles, US
-						</p>
-						<p>
-							<b>22nd Dec 2022 - 23rd June 2023</b> - <a id=show target="_blank"
-								href="https://www.cccb.org/en/exhibitions/file/brains/237851">Brains. When matter
-								becomes
-								mind,
-							</a><b> Fundacion Telefonica Museum</b>, Madrid, Spain
-						</p>
+
+						
 						<p>
 							<b>27th Aug 2023 - 28th Jan 2024</b> - <a id=show target="_blank"
 								href="https://maxernstmuseum.lvr.de/en/ausstellungen/vorschau_1/Preview.html">Surreal
@@ -348,6 +326,16 @@
 								Störung,
 							</a><b> Pinakothek der Moderne</b>, Munich, Germany
 						</p>
+						<p>
+							<b>12th Jan 2024 - 15th Jan 2024</b> - <a id=show target="_blank"
+								href="https://artsg.com/">Art SG,
+							</a> Singapore
+						</p>
+						<p>
+							<b>1st Mar 2024 - 24th Mar 2024</b> - <a id=show target="_blank"
+								href="https://photo.org.au/">PHOTO International Festival of Photography,
+							</a> <b>Melbourne and beyond</b>, Australia
+						</p>
 
 
 						<br>
@@ -358,12 +346,36 @@
 							<b>2023</b>
 						</p>
 						<p>
-
+							<a id=show target="_blank"
+								href="https://gazelliarthouse.com/exhibitions/170-jake-elwes-data-glitch-utopia/">Jake
+								Elwes: Data • Glitch • Utopia
+							</a>(solo show), <b>Gazelli Art House</b>, London, UK
+						</p>
+						<p>
 							<a id=show target="_blank"
 								href="https://www.somersethouse.org.uk/whats-on/the-horror-show">The
 								Horror Show!
 								A Twisted Tale Of Modern Britain,
 							</a> <b>Somerset House (2022-2023)</b>, London, UK
+						</p>
+						<p>
+							<a id=show target="_blank"
+								href="https://honorfraser.com/?s=current&eid=199">Make Me Feel Mighty Real: Drag/tech
+								And
+								The Queer Avatar,
+							</a> <b>Honor Fraser Gallery</b>, Los Angeles, US
+						</p>
+						<p>
+							<a id=show target="_blank"
+								href="https://www.cccb.org/en/exhibitions/file/brains/237851">Brains. When matter
+								becomes
+								mind,
+							</a><b> Fundacion Telefonica Museum</b>, Madrid, Spain
+						</p>
+						<p>
+							<a id=show target="_blank"
+								href="https://darz.art/en/galleries/blanc-international-contemporary-art-space">More
+								Than Human,</a> <b>Blanc Art Space</b>, Beijing, China
 						</p>
 						<p>
 							<a id=show target="_blank" href="https://cphdox.dk/interactive-exhibition/">INTER:ACTIVE -
@@ -1107,7 +1119,7 @@
 
 					<h4>Publications</h4>
 					<p>
-						- Not up to date -<br>
+						- Not up to date -<br><br>
 						Drew Hemment, Martin Zeilinger, Matjaz Vidmar, Jake Elwes (2022), Towards a heuristic model for
 						experiential AI in ‘The Zizi Show’. Edinburgh Futures Institute <br>
 
@@ -1182,8 +1194,51 @@
 
 					</p>
 
+
+
+
+
+					<h4>Selected Talks</h4>
+					<br>
+
+					<iframe class="third" src="https://www.youtube.com/embed/5kS59JagNFY" frameborder="0"
+						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+						srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/5kS59JagNFY?autoplay=1><img src=https://img.youtube.com/vi/5kS59JagNFY/hqdefault.jpg><span>▶</span></a>"
+						allowfullscreen></iframe>
+
+					<iframe class="third" src="https://www.youtube.com/embed/7UvzxiU3OB8" frameborder="0"
+						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+						srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/7UvzxiU3OB8?autoplay=1><img src=https://img.youtube.com/vi/7UvzxiU3OB8/hqdefault.jpg><span>▶</span></a>"
+						allowfullscreen></iframe>
+
+					<iframe class="third" src="https://www.youtube.com/embed/3c5-ABUkI_M" frameborder="0"
+						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+						srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/3c5-ABUkI_M?autoplay=1><img src=https://img.youtube.com/vi/3c5-ABUkI_M/hqdefault.jpg><span>▶</span></a>"
+						allowfullscreen></iframe>
+
+					<iframe class="third" src="https://www.youtube.com/embed/qQSSl533rb8" frameborder="0"
+						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+						srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/qQSSl533rb8?autoplay=1><img src=https://img.youtube.com/vi/qQSSl533rb8/hqdefault.jpg><span>▶</span></a>"
+						allowfullscreen></iframe>
+
+					<iframe class="third" src="https://www.youtube.com/embed/RRew6BCOUok" frameborder="0"
+						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+						srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/RRew6BCOUok?autoplay=1><img src=https://img.youtube.com/vi/RRew6BCOUok/hqdefault.jpg><span>▶</span></a>"
+						allowfullscreen></iframe>
+
+					<iframe class="third" src="https://www.youtube.com/embed/NwIhejF4_zE" frameborder="0"
+						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+						srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/NwIhejF4_zE?autoplay=1><img src=https://img.youtube.com/vi/NwIhejF4_zE/hqdefault.jpg><span>▶</span></a>"
+						allowfullscreen></iframe>
+
+					<!-- madrid - 1VuBBwuyHX8?start=218 -->
+					<!-- NGX - QOK97wutH-s -->
+					<br><br>
+
+
+
 					<h4>Talks / Conferences / Workshops</h4> <br>
-					- Not up to date - <br>
+					- Not up to date - <br><br>
 					<b>2019</b><br>
 					&emsp; talk - <a id=show target="_blank" href="https://www.youtube.com/watch?v=edETkt_xtVg">
 						Beyond Conference - November 2019</a>, Assembly Rooms, Edinburgh, Scotland<br>
