padding of socials links on about

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
 
 			<div class="desktop-4 tablet-6 columns">
 
-				<ul id="social">
+				<ul id="social" style="padding:0">
 					<li><a target="_blank" href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i
 								class="fa fa-fw fa-instagram"></i></a></li>
 					<li><a target="_blank" href="https://www.twitter.com/jakeelwes/" class="btn-social btn-outline"><i
