--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
 
 			<div class="item">
 				<div class="desktop-3 tablet-6 columns">
-					<img src="images/Jake Elwes2.jpg" alt="">
+					<img src="images/Jake Elwes3.jpg" alt="Jake Elwes Artist Portrait">
 				</div><!-- // .desktop-3 -->
 			</div>
 
