--- a/about.html
+++ b/about.html
@@ -1617,7 +1617,7 @@
 
 
 					<h4>Talks / Conferences / Workshops</h4> <br>
-					- Not up to date - <br><br>
+					- being updated - <br><br>
 					<b>2019</b><br>
 					&emsp; talk - <a id=show target="_blank" href="https://www.youtube.com/watch?v=edETkt_xtVg">
 						Beyond Conference - November 2019</a>, Assembly Rooms, Edinburgh, Scotland<br>
