added close up zizi vimeo

--- a/project-zizi-vam.html
+++ b/project-zizi-vam.html
@@ -198,12 +198,18 @@
 				<iframe id="vid" src="https://player.vimeo.com/video/832000739?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 					allowfullscreen></iframe>
-					<small>2 minute extract from The Zizi Show - A Deepfake Drag Cabaret</i> at the V&amp;A Museum</small><br><br>
+					<small>Large projecction channel from <i>The Zizi Show - A Deepfake Drag Cabaret</i> (2 minute extract)</small><br><br>
+
+					<iframe id="vid3" src="https://player.vimeo.com/video/879178192?color=ffffff&title=0&byline=0&portrait=0"
+					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+					allowfullscreen></iframe>
+					<small>Render of 7 close-up channels from <i>The Zizi Show - A Deepfake Drag Cabaret</i> (2 minute extract)</small><br><br>
 
 				<script>
 					function resizeDivs() {
 						$('#vid').css("height", $('#vid').width() / 1.7777);
 						$('#vid2').css("height", $('#vid2').width() / 1.7777);
+						$('#vid3').css("height", $('#vid3').width() / 1.7777);
 
 					}
 					$(resizeDivs);
