updated Zizi About for NY

--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -69,9 +69,9 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				title="Making of The Zizi Show" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen="allowfullscreen"></iframe>
-			<div class="font-serif text-center team md:px-20">
-				<p>A multi-channel video installation commissioned by the V&A with the support of the Manitou
-					Foundation, created with 21 of London and the UK’s top drag artists.</p>
+			<div class="font-serif text-center team px-8">
+				<small>A multi-channel video installation commissioned by the V&A with the support of the Manitou
+					Foundation, created with 21 of London and the UK’s top drag artists.</small>
 				<div class="p-4">
 					<p><a href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24"
 							target="_blank">V&amp;A Information</a></p>
@@ -80,8 +80,10 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				</div>
 			</div>
 			<img class="mx-auto" src="img/diagram-gen-full-small.gif" />
+			<img class="mx-auto mt-8" src="img/me.jpg" />
 
-			<div class="p-4 italic space-y-4 font-serif">
+
+			<div class="p-8 italic space-y-4 font-serif">
 				<p>
 					"The Zizi Project aims to bring together two things I love, artificial intelligence, and the world
 					of drag performance. Drag has allowed me to dig into some of the social issues built into machine
@@ -103,8 +105,37 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 			</div>
 		</div>
 
+		<div class="p-8 italic space-y-8 font-serif">
+			<iframe class="w-full aspect-video mt-8" src="https://player.vimeo.com/video/832000739?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479"
+				title="Making of The Zizi Show" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+				allowfullscreen="allowfullscreen"></iframe>
 
-		<img class="mx-auto mt-8" src="img/me.jpg" />
+			<div class="font-serif text-center mb-4">
+				<small>Large projection channel from The Zizi Show - A Deepfake Drag Cabaret (2 minute extract)</small>
+			</div>
+
+			<iframe class="w-full aspect-video mt-8" src="https://player.vimeo.com/video/879178192?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479"
+				title="Making of The Zizi Show" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+				allowfullscreen="allowfullscreen"></iframe>
+
+			<div class="font-serif text-center mb-4">
+				<small>Render of 7 close-up channels from The Zizi Show - A Deepfake Drag Cabaret (2 minute extract)</small>
+			</div>
+
+			<iframe class="w-full aspect-video mt-8" src="https://www.youtube.com/embed/Ngpr2lUS1Bk?rel=0&playsinline=0"
+				title="Making of The Zizi Show" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+				allowfullscreen="allowfullscreen"></iframe>
+
+			<div class="font-serif text-center mb-4">
+				<small>'I Am What I Am' 2020 - movement by Me the Drag Queen re-animating 21 deepfake drag perfomers</small>
+			</div>
+		</div>
+
+
+
 
 		<div class="w-full p-8 md:rounded-lg team text-center space-y-5 bg-cover bg-no-repeat bg-center bg-top"
 			style="background-image: url('img/curtain-bg-full.jpg')">
@@ -142,14 +173,18 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 			<div class="text-sm py-8 space-y-6 md:mx-32">
 				<p>
 
-					The first iteration of The Zizi Show was commissioned by <a href="https://www.newreal.cc/artworks/the-zizi-project" target="_blank">The New Real</a> at University of Edinburgh and The Alan Turing Institute as an online experience for Edinburgh International Festival (2021).
+					The first iteration of The Zizi Show was commissioned by <a
+						href="https://www.newreal.cc/artworks/the-zizi-project" target="_blank">The New Real</a> at
+					University of Edinburgh and The Alan Turing Institute as an online experience for Edinburgh
+					International Festival (2021).
 				</p>
 				<p><a href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24"
 						target="_blank">Comissioned by the V&amp;A</a> as a multi-channel video installation in 2023 for
 					the opening of the new
 					Photography Center.</p>
 
-				<p> Special thanks to Tom Francome for the documentary film, Charlie Baker for help with sound, Luke &amp; Anneke Elwes, Dave Cross + John &amp;
+				<p> Special thanks to Tom Francome for the documentary film, Charlie Baker for help with sound, Luke
+					&amp; Anneke Elwes, Dave Cross + John &amp;
 					James at the RVT
 				</p>
 
@@ -162,6 +197,7 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 
 
 		</div>
+
 
 		<div
 			class="w-full font-serif p-8 text-center text-rose-950 md:rounded-lg bg-gradient-to-b from-stone-100 from-10% via-white via-30% to-stone-200 to-90%">
