--- a/project-zizi-vam.html
+++ b/project-zizi-vam.html
@@ -198,7 +198,7 @@
 				<iframe id="vid" src="https://player.vimeo.com/video/832000739?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 					allowfullscreen></iframe>
-					<small>Large projecction channel from <i>The Zizi Show - A Deepfake Drag Cabaret</i> (2 minute extract)</small><br><br>
+					<small>Large projection channel from <i>The Zizi Show - A Deepfake Drag Cabaret</i> (2 minute extract)</small><br><br>
 
 					<iframe id="vid3" src="https://player.vimeo.com/video/879178192?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
