updated Zizi About for NY

--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -106,22 +106,22 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 		</div>
 
 		<div class="p-8 italic space-y-8 font-serif">
-			<iframe class="w-full aspect-video mt-8" src="https://player.vimeo.com/video/832000739?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479"
+			<iframe class="w-full aspect-video mt-8" src="https://player.vimeo.com/video/832000739?badge=0&byline=false&autopause=0&quality_selector=1&player_id=0&app_id=58479"
 				title="Making of The Zizi Show" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen="allowfullscreen"></iframe>
 
 			<div class="font-serif text-center mb-4">
-				<small>Large projection channel from The Zizi Show - A Deepfake Drag Cabaret (2 minute extract)</small>
+				<small>Large projection channel, lipsync movement performed by Cara Melle</small>
 			</div>
 
-			<iframe class="w-full aspect-video mt-8" src="https://player.vimeo.com/video/879178192?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479"
+			<iframe class="w-full aspect-video mt-8" src="https://player.vimeo.com/video/879178192?badge=0&byline=false&autopause=0&quality_selector=1&player_id=0&app_id=58479"
 				title="Making of The Zizi Show" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen="allowfullscreen"></iframe>
 
 			<div class="font-serif text-center mb-4">
-				<small>Render of 7 close-up channels from The Zizi Show - A Deepfake Drag Cabaret (2 minute extract)</small>
+				<small>Render of 7 close-up channels, lipsync movement performed by Chiyo</small>
 			</div>
 
 			<iframe class="w-full aspect-video mt-8" src="https://www.youtube.com/embed/Ngpr2lUS1Bk?rel=0&playsinline=0"
@@ -130,7 +130,7 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				allowfullscreen="allowfullscreen"></iframe>
 
 			<div class="font-serif text-center mb-4">
-				<small>'I Am What I Am' 2020 - movement by Me the Drag Queen re-animating 21 deepfake drag perfomers</small>
+				<small>'I Am What I Am' 2020, lipsync movement performed by Me the Drag Queen</small>
 			</div>
 		</div>
 
