--- a/project-zizi-vam.html
+++ b/project-zizi-vam.html
@@ -198,12 +198,12 @@
 				<iframe id="vid" src="https://player.vimeo.com/video/832000739?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 					allowfullscreen></iframe>
-					<small>Large projection channel from <i>The Zizi Show - A Deepfake Drag Cabaret</i> (2 minute extract)</small><br><br>
+					<small>Large projection channel, lipsync movement performed by Cara Melle</small><br><br>
 
 					<iframe id="vid3" src="https://player.vimeo.com/video/879178192?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 					allowfullscreen></iframe>
-					<small>Render of 7 close-up channels from <i>The Zizi Show - A Deepfake Drag Cabaret</i> (2 minute extract)</small><br><br>
+					<small>Render of 7 close-up channels, lipsync movement performed by Chiyo</small><br><br>
 
 				<script>
 					function resizeDivs() {
