about update with images etc

--- a/about.html
+++ b/about.html
@@ -1590,47 +1590,9 @@
 
 
 
-					<h4>Selected Talks</h4>
-					<br>
-
-					<iframe class="third" src="https://www.youtube.com/embed/5kS59JagNFY" frameborder="0"
-						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-						srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/5kS59JagNFY?autoplay=1><img src=https://img.youtube.com/vi/5kS59JagNFY/hqdefault.jpg><span>▶</span></a>"
-						allowfullscreen></iframe>
-
-					<iframe class="third" src="https://www.youtube.com/embed/7UvzxiU3OB8" frameborder="0"
-						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-						srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/7UvzxiU3OB8?autoplay=1><img src=https://img.youtube.com/vi/7UvzxiU3OB8/hqdefault.jpg><span>▶</span></a>"
-						allowfullscreen></iframe>
-
-					<iframe class="third" src="https://www.youtube.com/embed/3c5-ABUkI_M" frameborder="0"
-						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-						srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/3c5-ABUkI_M?autoplay=1><img src=https://img.youtube.com/vi/3c5-ABUkI_M/hqdefault.jpg><span>▶</span></a>"
-						allowfullscreen></iframe>
-
-					<iframe class="third" src="https://www.youtube.com/embed/qQSSl533rb8" frameborder="0"
-						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-						srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/qQSSl533rb8?autoplay=1><img src=https://img.youtube.com/vi/qQSSl533rb8/hqdefault.jpg><span>▶</span></a>"
-						allowfullscreen></iframe>
-
-					<iframe class="third" src="https://www.youtube.com/embed/RRew6BCOUok" frameborder="0"
-						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-						srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/RRew6BCOUok?autoplay=1><img src=https://img.youtube.com/vi/RRew6BCOUok/hqdefault.jpg><span>▶</span></a>"
-						allowfullscreen></iframe>
-
-					<iframe class="third" src="https://www.youtube.com/embed/NwIhejF4_zE" frameborder="0"
-						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-						srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/NwIhejF4_zE?autoplay=1><img src=https://img.youtube.com/vi/NwIhejF4_zE/hqdefault.jpg><span>▶</span></a>"
-						allowfullscreen></iframe>
-
-					<!-- madrid - 1VuBBwuyHX8?start=218 -->
-					<!-- NGX - QOK97wutH-s -->
-					<br><br>
-
-
 
 					<h4>Talks / Conferences / Workshops</h4> <br>
-					- being updated - <br><br>
+					- very out of date, being updated - <br><br>
 					<b>2019</b><br>
 					&emsp; talk - <a id=show target="_blank" href="https://www.youtube.com/watch?v=edETkt_xtVg">
 						Beyond Conference - November 2019</a>, Assembly Rooms, Edinburgh, Scotland<br>
